--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,6 @@
 @import "tw-animate-css";
 @tailwind utilities;
 
-button{
-  border: none;
-}
-
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -65,8 +61,10 @@ button{
   --accent: oklch(0.967 0.001 286.375);
   --accent-foreground: oklch(0.21 0.006 285.885);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.92 0.004 286.32);
-  --input: oklch(0.92 0.004 286.32);
+  /* --border: oklch(0.92 0.004 286.32); */
+  --border: oklch(0.85 0.03 286.32);
+  /* --input: oklch(0.92 0.004 286.32); */
+  --border: oklch(0.85 0.03 286.32);
   --ring: oklch(0.705 0.015 286.067);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
